# helmeos

./: .flake8  .gitignore  README.md  __init__.py  codecov.yml  example.py  helm_table.py  pyproject.toml  requirements.txt  table_param.py  test.py  tox.ini
.github/workflows/: ci.yml
athena/: __init__.py  eos.py  example.py  util.py
helmeos/: __init__.py  example.py  helm_table.py  phys_const.py
tests/: test.py  test_example.py  test_helm_table.py  test_inversion.py  test_plotting.py
